--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,10 @@ ol {
   text-align: center;
   color: #2e2f42;
 }
+.characters-developers{
+    background: #f4f4fd;
+}
+
 .img-character {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -98,6 +102,7 @@ ol {
 }
 .character-name {
   text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
 .character-post {
   font-size: 16px;
